--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,6 +2,6 @@ github: [FarhaKousar1601]  # Your GitHub Sponsors username (if enabled)
 open_collective:           GSSOC,SSOC
 ko_fi: farhakousar         https://ko-fi.com/farhakousar16
 issuehunt: Farha Kousar    eff2a95f-03fc-4557-9340-76896950359d
-buy_me_a_coffee: farhakousar
+buy_me_a_coffee: farhakousar farhakousar46-1@okaxis
 thanks_dev: farhakousar
 custom: ['https://farhakousar1601.bio.link', 'https://www.linkedin.com/in/farhakousar']
